delays fighting new monster until he appears

--- a/main.css
+++ b/main.css
@@ -9,3 +9,10 @@
     height: 20px;
     background-color: red;
 }
+
+.health-bar {
+    display: flex;
+    justify-content: flex-end;
+    transition: width 1s;
+    color: white;
+}
